--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "marvel",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://toshapa.github.io/udemy_react_002",
+  "homepage": "https://toshapa.github.io/udemy_react_002/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
