--- a/package.json
+++ b/package.json
@@ -9,17 +9,16 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-    
   },
   "eslintConfig": {
     "extends": [
@@ -41,5 +40,16 @@
   },
   "devDependencies": {
     "sass": "^1.38.0"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/toshapa/udemy_react_002.git"
+  },
+  "author": "AP",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/toshapa/udemy_react_002/issues"
   }
 }
