--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "marvel",
   "version": "0.2.0",
-  "homepage" : "https://toshapa.github.io/udemy_react_002/",
+  "homepage": "https://github.com/toshapa/udemy_react_002.git",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -17,7 +17,7 @@
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
     "predeploy": "npm run build",
-    "deploy" : "gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -48,7 +48,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/toshapa/udemy_react_002.git"
+    "url": "git+https://github.com/toshapa/udemy_react_002.git"
   },
   "author": "AP",
   "license": "ISC",
