--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "marvel",
   "version": "0.2.0",
-  "homepage": "https://github.com/toshapa/udemy_react_002.git",
+  "homepage": "/#",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
