--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "marvel",
   "version": "0.2.0",
-  "homepage": "/#",
+  "homepage": "/udemy_react_002/#",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
